fixed container overspill problem

--- a/my_website/src/App.css
+++ b/my_website/src/App.css
@@ -6,7 +6,7 @@
     min-height: 100%;
     max-width: 100%;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 200px 250px 1fr 100px;
+    grid-template-rows: 200px 1fr 1fr 100px;
     font-family: 'Roboto Slab', serif;
 
     grid-template-areas:
